fix line spacing

--- a/app/scss/pages/_url-form.scss
+++ b/app/scss/pages/_url-form.scss
@@ -21,6 +21,7 @@
   div{
     width:100% !important;
     font-size: 1.2rem !important;
+    line-height: 1.2em !important;
   }
 }
 
